Layed groud for few components and options

--- a/src/components/LayoutContent/package.json
+++ b/src/components/LayoutContent/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "LayoutTabs",
-    "main": "./LayoutTabs.js",
+    "name": "LayoutContent",
+    "main": "./LayoutContent.js",
     "version": "0.1.0",
     "description": "Containers for contant"
 }
